# 3p3-evaluation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  docker-compose.yml  messages.sh  nodes.sh  run.sh  threads.sh
cert/: private.pem  server_cert.pem
docker/build_ubuntu/: Dockerfile
docker/central/: Dockerfile
docker/threePP/: Dockerfile
docker/threePP_ubuntu/: Dockerfile
results_evaluation/: resultsparser.py
results_evaluation/example/: messages.csv  messages_comparisson.m  messagesall_totals.csv  nodes.csv  nodes_comparisson.m  nodesall_totals.csv  threads.csv  threads_evaluation.m  threadsall_totals.csv
sample_topologies/: Graph_10000Nodes_8Degree.csv  Graph_1000Nodes_8Degree.csv  Graph_100Nodes_8Degree.csv  Graph_2000Nodes_8Degree.csv  Graph_200Nodes_8Degree.csv  Graph_5000Nodes_8Degree.csv  Graph_500Nodes_8Degree.csv
sample_topologies/1000Nodes/: Graph0.csv  Graph1.csv  Graph2.csv  Graph3.csv  Graph4.csv  Graph5.csv  Graph6.csv  Graph7.csv  Graph8.csv  Graph9.csv
sample_topologies/100Nodes/: Graph0.csv  Graph1.csv  Graph2.csv  Graph3.csv  Graph4.csv  Graph5.csv  Graph6.csv  Graph7.csv  Graph8.csv  Graph9.csv
sample_topologies/2500Nodes/: Graph0.csv  Graph1.csv  Graph2.csv  Graph3.csv  Graph4.csv  Graph5.csv  Graph6.csv  Graph7.csv  Graph8.csv  Graph9.csv
sample_topologies/250Nodes/: Graph0.csv  Graph1.csv  Graph2.csv  Graph3.csv  Graph4.csv  Graph5.csv  Graph6.csv  Graph7.csv  Graph8.csv  Graph9.csv
sample_topologies/5000Nodes/: Graph0.csv  Graph1.csv  Graph2.csv  Graph3.csv  Graph4.csv  Graph5.csv  Graph6.csv  Graph7.csv  Graph8.csv  Graph9.csv
sample_topologies/500Nodes/: Graph0.csv  Graph1.csv  Graph2.csv  Graph3.csv  Graph4.csv  Graph5.csv  Graph6.csv  Graph7.csv  Graph8.csv  Graph9.csv
src/ad/: AdaptiveDiffusion.cpp  AdaptiveDiffusion.h  VirtualSource.cpp  VirtualSource.h
src/crypto/: Utils.cpp  Utils.h
src/datastruct/: BufferedMessage.cpp  BufferedMessage.h  DirectMessage.cpp  DirectMessage.h  MessageBuffer.cpp  MessageBuffer.h  MessageQueue.cpp  MessageQueue.h  MessageType.h  NetworkMessage.cpp  NetworkMessage.h  OutgoingMessage.cpp  OutgoingMessage.h  ReceivedMessage.cpp  ReceivedMessage.h
src/dc/: BlameProtocol.cpp  BlameProtocol.h  BlameRound.cpp  BlameRound.h  DCMember.cpp  DCMember.h  DCNetwork.cpp  DCNetwork.h  DCNetworkState.h  DCState.h  FairnessProtocol.cpp  FairnessProtocol.h  FinalRound.cpp  FinalRound.h  Init.cpp  Init.h  InitState.cpp  InitState.h  InitialRound.cpp  InitialRound.h  ProtocolMode.h  Ready.cpp  Ready.h  ReadyState.cpp  ReadyState.h  RoundOne.cpp  RoundOne.h  RoundOneSecured.cpp  RoundOneSecured.h  RoundOneUnsecured.cpp  RoundOneUnsecured.h  RoundTwo.cpp  RoundTwo.h  SecuredFinalRound.cpp  SecuredFinalRound.h  SecuredInitialRound.cpp  SecuredInitialRound.h  SeedRound.cpp  SeedRound.h  UnsecuredFinalRound.cpp  (+5 more)
src/docker/: LogContainer.cpp  NodeAuthority.cpp  ThreePP.cpp  ThreePPContainer.cpp
src/evaluation/: AdaptiveDiffusionMonitoring.cpp  FloodAndPruneMonitoring.cpp
src/network/: MessageHandler.cpp  MessageHandler.h  NetworkManager.cpp  NetworkManager.h  NetworkMessage.cpp  NetworkMessage.h  Node.cpp  Node.h  P2PConnection.cpp  P2PConnection.h  Peer.cpp  Peer.h  ReceivedMessage.cpp  SecuredNetworkManager.cpp  SecuredNetworkManager.h  UnsecuredNetworkManager.cpp  UnsecuredNetworkManager.h  UnsecuredP2PConnection.cpp  UnsecuredP2PConnection.h  node.cpp  node.h  p2p_connection.cpp  p2p_connection.h  peer.cpp  peer.h  peer_handler.cpp  peer_handler.h
src/test/: AdaptiveDiffusionTest.cpp  CryptoTest.cpp  DCNetworkTest.cpp  FloodAndPruneTest.cpp  NetworkTest.cpp  TestData.h  ThreePP.cpp  mainTest.cpp  networkTest.cpp  test.cpp
src/threePP/: DCNetwork.cpp  DCNetwork.h  DC_Network.cpp  DC_Network.h  ProtocolPhase.h
src/utils/: Utils.cpp  Utils.h
